
* <gzip> will throw an exception if your src attribute points to a directory.

* Unjar, Unzip and Unwar will throw an exception if the Src attribute
  represents a directory.  Support for nested filesets is provided
  instead.

* Some loopholes in the immutability rule have been closed. It is no longer
  possible to overwrite a property using tasks like <available> or <condition>.  

Fixed bugs:
-----------
* Fixed bug with 4NT shell support

* Fixed bug where ant would not perform ftp without remotedir being
  specified even though this was not mandatory.

* Fixed bug where ant would not copy system properties into new Project
  in ant/antcall tasks when inheritall="false" is set.

* <propertyfile> would not close the original property file.

* <ant> will no longer override a subbuilds basedir with inheritall="true". 

* Fixed problem with the built-in <junit> formatters which assumed
  that only one test could be running at the same time - this is not
  necessarily true, see junit.extensions.ActiveTestSuite.

* <jar>'s whenEmpty attribute is useless as JARs are never empty, they
  contain at least a manifest file, therefore it will now print a
  warning and do nothing.

* <typedef> hasn't been all that useful as it couldn't be used outside
  of targets (it can now) and nested "unknown" elements have always
  been considered to be tasks (changed as well).

* <fixcrlf> would fail for files that contained lines longer than 8kB.

* Some junit formatters incorrectly assumed that all testcases would
  inherit from junit.framework.TestCase.

Other changes:
--------------
* Exec task has extra attribute "resultproperty" to get the return code
  into a property.
  
* Exec task prints a message when a timed out process is killed.  
  
* Added optional attributes - name, arch and version to <os>

* Unjar, Untar, Unwar and Unzip now support patternsets to 
  select files from an archive for extraction.  Filesets may be 
  used to select archived files for unarchival.
